--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
 		"start": "live-server client --host=localhost --port=5500 --no-browser",
 		"serve": "node server/index.js"
 	},
-  "devDependencies": {
-    "eslint": "^8.44.0",
-    "live-server": "^1.2.2",
-    "prettier": "^2.8.8"
-  }
+	"devDependencies": {
+		"eslint": "^8.44.0",
+		"live-server": "^1.2.2",
+		"prettier": "^2.8.8"
+	},
+	"dependencies": {
+		"gsap": "^3.12.2"
+	}
 }
